Add minified CSS and link to Github page

--- a/source/partials/_content.haml
+++ b/source/partials/_content.haml
@@ -9,12 +9,25 @@
   :markdown
     ## Installation
 
+    ## Sass
+
     Download [navbar-fixed-side.scss](https://raw.githubusercontent.com/samrayner/bootstrap-side-navbar/source/source/assets/stylesheets/navbar-fixed-side.scss)
 
     Include it after Bootstrap in your Sass file:
 
         @import 'bootstrap';
         @import 'navbar-fixed-side';
+
+    ## CSS
+
+    Download the minified [navbar-fixed-side.css](https://raw.githubusercontent.com/samrayner/bootstrap-side-navbar/gh-pages/assets/stylesheets/navbar-fixed-side.css)
+
+    Include it after Bootstrap in your HTML:
+
+        <link href="css/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/navbar-fixed-side.css" rel="stylesheet" />
+
+    ---
 
     ## Usage
 
@@ -60,3 +73,6 @@
 
     [co]: https://getbootstrap.com/css/#grid-column-ordering
     [nft]: http://getbootstrap.com/components/#navbar-fixed-top
+
+  = link_to "https://github.com/samrayner/bootstrap-side-navbar", class: 'github-ribbon' do
+    = image_tag "https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67", alt: "Fork me on Github"
