--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -1,3 +1,14 @@
 @import "bootstrap";
 @import "navbar-fixed-side";
 @import "vendor/highlight";
+
+#content {
+  position: relative;
+}
+
+.github-ribbon {
+  position: absolute;
+  top: -20px;
+  right: -15px;
+  z-index: 99;
+}
