Add icon and license

--- a/source/partials/_content.haml
+++ b/source/partials/_content.haml
@@ -1,10 +1,13 @@
 #content
   %h1
+    = image_tag 'bs3-side-navbar.png', height: 80
     Side Navbar for Bootstrap 3
     %br/
     %small
       Responsive sidebar navigation using
       = link_to 'default Bootstrap 3 navbar markup', 'http://getbootstrap.com/components/#navbar'
+
+  %h4 Sponsored by #{link_to 'Terracoding', 'http://www.terracoding.com' }
 
   :markdown
     ## Installation
