--- a/source/partials/_content.haml
+++ b/source/partials/_content.haml
@@ -30,6 +30,10 @@
         <link href="css/bootstrap.min.css" rel="stylesheet" />
         <link href="css/navbar-fixed-side.css" rel="stylesheet" />
 
+    ## Bower
+
+    `bower install bootstrap-side-navbar`
+
     ---
 
     ## Usage
