--- a/source/partials/_content.haml
+++ b/source/partials/_content.haml
@@ -56,6 +56,7 @@
             </div>
             <div class="col-sm-9 col-lg-10">
               <!-- your page content -->
+            </div>
           </div>
         </div>
 
@@ -71,6 +72,7 @@
             </div>
             <div class="col-sm-9 col-lg-10 col-sm-pull-3 col-lg-pull-2">
               <!-- your page content -->
+            </div>
           </div>
         </div>
 
